only regenerate form's css if needed Case: SVY-1035